BUG FIXES: added some css that fixed the messed up default view on the image gallery and wrapped the email send in a try/catch.

--- a/themes/common/css/imagegallerymodule.css
+++ b/themes/common/css/imagegallerymodule.css
@@ -17,3 +17,8 @@
 	padding:0 10px;
 }
 
+.imagegallerymodule div.item {
+        clear: both;
+        padding: 10px 0px;
+}
+
